syntax = "proto3";

package autokitteh.vars.v1;

message Var {
  string scope_id = 1;
  string name = 2;
  string value = 3;
  bool is_secret = 4;
  bool is_optional = 5; // value can be empty.
}
